Dodano funkcjonalność płynnego scrollowania.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	</head>
 
 	<body>
-        <a href="index.html"><div id="logo"></div></a>
+        <a href="#Start"><div id="logo"></div></a>
         <!--STRONA TYTUŁOWA-->
         <div class="title_page">
         <!--MENU-->
-            <div class="nav">
+            <div class="nav" id="Start">
                 <a href="index.html" style="color: hotpink;">strona główna</a>
                 <a href="o_nas.html">o nas</a>
                 <a href="aktualno%C5%9Bci.html">aktualności</a>
@@ -25,15 +25,15 @@
         </div>
         <!--BLOKI-->
         <div class="blocks">
-            <span class="block" style="background-color: #4a47a3;"><h2 class="h_middle">o nas</h2><p class="p_middle">kim jesteśmy i jak działamy</p></span>
-            <span class="block"style="background-color: #ad62aa;"><h2 class="h_middle">misja</h2><p class="p_middle">co robimy i o co walczymy</p></span>
-            <span class="block" style="background-color: #f4b0c7"><h2 class="h_middle">wydarzenia</h2><p class="p_middle">gdzie i kiedy promujemy naszą działalność</p></span>
+            <span class="block" style="background-color: #4a47a3;"><h2 class="h_middle"><a href="#O_Nas">o nas</a></h2><p class="p_middle">kim jesteśmy i jak działamy</p></span>
+            <span class="block"style="background-color: #ad62aa;"><h2 class="h_middle"><a href="#Mission">misja</a></h2><p class="p_middle">co robimy i o co walczymy</p></span>
+            <span class="block" style="background-color: #f4b0c7"><h2 class="h_middle"><a href="#Events">wydarzenia</a></h2><p class="p_middle">gdzie i kiedy promujemy naszą działalność</p></span>
         </div>
         
         <div class="row">
             <div class="main">
                 <!--ARTYKUŁY-->
-                <div class="white_article">
+                <div class="white_article" id="O_Nas">
                 <h2 class="h_big">o nas</h2>
                 <p class="p_small">
                     Fundacja Nowa Nadzieja jest częścią <b>OBAMA FOUNDATION.</b> To niezależna, krajowa organizacja non-profit założona 1 października 2019. w celu <b>promowania wsparcia społecznego i wyrównywania szans rozwojowo - zawodowych.</b> Rada Fundacji Nowa Nadzieja składa się z obecnych i byłych rektorów polskich uniwersytetów i innych wybitnych osób publicznych. W swoich celach ma za zadanie promować następujące działania społeczne:
@@ -46,7 +46,7 @@
                     </p>
                 <div class="button"><a href="o_nas.html">czytaj dalej</a></div>
                 </div>
-                <div class="color_article">
+                <div class="color_article" id="Mission">
                 <h2 class="h_big">misja</h2>
                 <p class="p_small">
                     Ta misja dotyczy całej naszej pracy, bez względu na to, czy organizuje ona szkolenia dla liderów w społecznościach na całym świecie, wspiera globalną edukację dziewcząt czy zapewnia młodym mężczyznom o różnych kulturach drogę do rozwoju swoich do możliwości.
@@ -57,7 +57,7 @@
                 <div class="button"><a href="misja.html">więcej</a></div>
                 </div>
                 <!--KALENDARZ-->
-                <div class="callendar">
+                <div class="callendar" id="Events">
                     <h2 class="h_big">nadchodzące wydarzenia</h2>
                     <ul>
                         <li><span class="date">16.11.2019</span> - Konkurs IT Diamonds, Chorzów, godzina rozpoczęcia 9:00</li>
