Poprawiono wyświetlanie elementu info na każdej podstronie. Poprawiono wygląd danych na podstronie O Nas.

--- a/aktualności.html
+++ b/aktualności.html
@@ -72,16 +72,16 @@ Sprawdź projekty na stronie Girls Opportunity Alliance GoFundMe i daj nam znać
                     <h2 class="h_small">Kontakt</h2>
                         <p class="p_little">
                         Fundacja Nowa Nadzieja
-                        <br/>Ul. Słoneczna 31
-                        <br/>PL 00-511 Warszawa
-                        <br/><b>Telefon:</b> +48 22 629 53 21
-                        <br/><b>Fax:</b> +48 22 629 1678
-                        <br/><b>Email:</b> fundacja@nownadzieja.pl
+                        Ul. Słoneczna 31
+                        PL 00-511 Warszawa
+                        <b>Telefon:</b> +48 22 629 53 21
+                        <b>Fax:</b> +48 22 629 1678
+                        <b>Email:</b> fundacja@nownadzieja.pl
 
-                        <br/>
-                        <br/>Sekretariat
-                        <br/>Joanna Nowak
-                        <br/><b>Email:</b> j.nowak@nowanadzieja.pl
+                        
+                        Sekretariat
+                        Joanna Nowak
+                        <b>Email:</b> j.nowak@nowanadzieja.pl
                         </p>
                     </span>
                     <span id="newsletter"><h2 class="h_small">Zapisz się na newsletter</h2>
