--- a/o_nas.html
+++ b/o_nas.html
@@ -47,36 +47,27 @@ Ostatni rok spędziliśmy na opracowywaniu programów i możliwości angażowani
                 <div class="info">
                 <span id="account">
                     <h2 class="h_small">Konto bankowe</h2>
-                    <p class="p_small">
-85 1140 1010 9874 2581 1800 1801
+                    <p class="p_little">
+<b>85 1140 1010 9874 2581 1800 1801</b>
 Dla osób z zagranicy podajemy SWIFT oraz IBAN:
-SWIFT
+<b>SWIFT</b>
 BREXPLKWWA9
-IBAN
+<b>IBAN</b>
 PL25 1190 1010 9814 2581 1800 1001
                     </p>
                     </span>
                 <span id="data">
                     <h2 class="h_small">Dane o fundacji</h2>
-                    <p class="p_small">
-NIP: 529 31 00 461
-KRS: 00290018894
-REGON: 0179999771
+                    <p class="p_little">
+<b>NIP:</b> 
+                        529 31 00 461
+<b>KRS:</b> 
+                        00290018894
+<b>REGON:</b> 
+                        0179999771
                     </p>    
                     </span>
-                    <span id="small_contact">
-                    <h2 class="h_small">Kontakt</h2>
-                        <p class="p_small">
-                        Fundacja Nowa Nadzieja
-                        Ul. Słoneczna 31
-                        PL 00-511 Warszawa
-                        <b>Telefon:</b> 
-                            +48 22 629 53 21
-                        <b>Fax:</b> 
-                            +48 22 629 1678
-                        <b>Email:</b>
-                            fundacja@nownadzieja.pl
-                    </span>
+                    
                 </div>
             <div class="donate">
                     <span class="color_article"><h2 class="h_middle">dołącz do nas!</h2>
@@ -90,16 +81,16 @@ REGON: 0179999771
                     <h2 class="h_small">Kontakt</h2>
                         <p class="p_little">
                         Fundacja Nowa Nadzieja
-                        <br/>Ul. Słoneczna 31
-                        <br/>PL 00-511 Warszawa
-                        <br/><b>Telefon:</b> +48 22 629 53 21
-                        <br/><b>Fax:</b> +48 22 629 1678
-                        <br/><b>Email:</b> fundacja@nownadzieja.pl
+                        Ul. Słoneczna 31
+                        PL 00-511 Warszawa
+                        <b>Telefon</b> +48 22 629 53 21
+                        <b>Fax:</b> +48 22 629 1678
+                        <b>Email:</b> fundacja@nownadzieja.pl
 
-                        <br/>
-                        <br/>Sekretariat
-                        <br/>Joanna Nowak
-                        <br/><b>Email:</b> j.nowak@nowanadzieja.pl
+                        
+                        Sekretariat
+                        Joanna Nowak
+                        <b>Email:</b> j.nowak@nowanadzieja.pl
                         </p>
                     </span>
                     <span id="newsletter"><h2 class="h_small">Zapisz się na newsletter</h2>
