--- a/secret.html
+++ b/secret.html
@@ -27,21 +27,33 @@ display: none;
         body
             {
                 background-color: black;
+                display: block;
             }
         div
             {
                 margin: 0 auto;
-                width: 600px;
-                height: 800px;
-                background-image: url(AH3e465.png);
+                
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
+            }
+        #QR
+            {
+                width: 300px;
+                height: 300px;
+                background-image: url(QR_secret_white.png);
+            }
+        #message
+            {
+                width: 600px;
+                height: 800px;
+                background-image: url(AH3e465.png);
             }
         </style>
 	</head>
 
 	<body>
-        <div></div>
+        <div id="message"></div>
+        <div id="QR"></div>
 	</body>
 </html>
