--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <span id="newsletter"><h2 class="h_small">Zapisz się na newsletter</h2>
                         <center><input type="email" name="Email" maxlength="40" placeholder="Email"></center>
                         
-                        <div class="button"><a href="#">zapisz się</a></div>
+                        <div class="button"><a>zapisz się</a></div>
                     </span>
                     <!--LINKI-->
                     <span id="links">
