--- a/o_nas.html
+++ b/o_nas.html
@@ -96,7 +96,7 @@ PL25 1190 1010 9814 2581 1800 1001
                     <span id="newsletter"><h2 class="h_small">Zapisz się na newsletter</h2>
                         <center><input type="email" name="Email" maxlength="40" placeholder="Email"></center>
                         
-                        <div class="button"><a href="#">zapisz się</a></div>
+                        <div class="button"><a>zapisz się</a></div>
                     </span>
                     <!--LINKI-->
                     <span id="links">
