--- a/secret.html
+++ b/secret.html
@@ -49,6 +49,13 @@ display: none;
                 height: 800px;
                 background-image: url(AH3e465.png);
             }
+            @media screen and (max-width: 700px)
+            {
+                #QR
+                {
+                    display: none;
+                }
+            }
         </style>
 	</head>
 
